--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       # Node versions list
       matrix:
-        node-version: [13.x, 14x]
+        node-version: [13.x, 14.x]
 
     steps:
       # Check-out repository under GitHub workspace
