--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "genDiff",
   "main": "bin/genDiff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx -n --experimental-vm-modules jest",
     "genDiff": "bin/genDiff.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
   },
   "type": "module",
   "repository": {
@@ -22,12 +26,15 @@
   },
   "homepage": "https://github.com/evgeniya-osmakova/frontend-project-lvl2#readme",
   "dependencies": {
+    "@jest/globals": "^26.0.1",
     "commander": "^5.1.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "^26.0.1",
+    "jest-cli": "^26.0.1"
   }
 }
