--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@jest/globals": "^26.0.1",
     "commander": "^5.1.0",
+    "ini": "^1.3.5",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
