--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hexletprj2",
   "version": "1.0.0",
   "description": "genDiff",
-  "main": "bin/genDiff.js",
+  "main": "src/index.js",
   "bin": {
     "gendiff": "bin/genDiff.js"
   },
